# trustlayer-perturb

./: .gitignore  Coverage_Meter.html  Experiment_Workflows.html  INTEGRITY.md  July_8th_Round_1.md  Live_Abstention_Demo.html  PITCH_PLAYBOOK.md  POSITIONING_AND_IMPACT.md  PRESENTATION_SHOTLIST.md  Plan_to_10_GapClosure.md  Plan_to_10_PerBullet.md  README.md  SCOPE.md  Trust_Atlas.html  Trust_Layer_Deck_v5.html  Trust_Layer_Presentation.html  Validation_Path_Proposal.md  WetLab_Validation_Protocol.md  _script_manifest.jsonl  experiments.tsv  honesty_ledger.html  index.html  iteration-2-refinements.md  methodology.md  pitch-deck.html  project_report.html  requirements-lock.txt  requirements.txt  research-state.md  run_all.sh  t1d-nomination-memo.md
artifacts_signtrust/: prereg_signtrust.json
benchmark/: README.md  benchmark_prereg.json  benchmark_receipt.json  calibration_benchmark.py
data/: _pdf_v2.txt  _pdf_v2_backup.txt
models/: base_predictor.joblib
paper_aux/: README.md  benchmark_paper.aux  benchmark_paper.bbl  benchmark_paper.blg  benchmark_paper.out  benchmark_paper.tex  references.bib
release/: PREPRINT_ABSTRACT.md  REFRAME_AND_DEMO_STORYBOARD.md
release/trustlayer/: CITATION.cff  LICENSE  README.md  commit_gate.py  pyproject.toml
release/trustlayer/src/trustlayer/: __init__.py
reports/: angle2_public_data_for_calibration.md
src/: _prefetch_eqtl.py  _prefetch_pool_signals.py  build_gold_set.py  build_treg_axis.py  data_facts.py  make_nextrun_figures.py  precheck_truth_sizing.py  reconstruct_carpool.py  run_commit_gate.py  run_conformal_lodo.py  (+18 more)
(+138 files in other folders)
